--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             margin-right: 4px;
             border-radius: 10px;
             " >
-            Saya.com
+            Reksa.com
         </div>
         <div style="
             float: right; 
