--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saya.com</title>
+    <title>Reksa.com</title>
 </head>
 <body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;" >
     <div style="
@@ -20,7 +20,7 @@
             margin-right: 4px;
             border-radius: 10px;
             " >
-            Reksa.com
+            Menu
         </div>
         <div style="
             float: right; 
