--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reksa.com</title>
 </head>
-<body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;" >
+<body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; background-color: bisque;" >
     <div style="
         background-color:rgb(98, 189, 24); 
         height: 30px; 
@@ -51,7 +51,7 @@
     <!-- perkenalan -->
     <br/>
     <!-- skill -->
-    skill saya python, JS, HTML (Bisa hack NASA)
+    skill saya python, JS, HTML (Bisa menamatkan 1 season anime dalam sehari)
     <!-- skill -->
     </div>
 </body>
