--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
     </div>
     <div style="text-align: center;">
     <!-- perkenalan -->
-    perkenalkan nama saya Reksa
+    <h1>perkenalkan nama saya Reksa</h1>
     <!-- perkenalan -->
     <br/>
     <!-- skill -->
-    skill saya python, JS, HTML (Bisa menamatkan 1 season anime dalam sehari)
+    <li>
+        <ul>skill saya python, JS, HTML</ul>
+        <ul>Bisa menamatkan 1 season anime dalam sehari</ul>
+    </li>
     <!-- skill -->
     </div>
 </body>
